# ROS2_RIGBETEL

./: README.md
assignment1/: package.xml  setup.py
assignment1/assignment1/: temperatureNode.py
assignment1/assignment1/install/: local_setup.sh  setup.sh  setup.zsh
assignment1/assignment1/log/: latest_build
assignment1/launch/: assignment1_launch.py
assignment1_cpp/: CMakeLists.txt  package.xml
assignment1_cpp/launch/: assignment1_cpp_launch.py
assignment1_cpp/src/: status_sub.cpp  temp_analysis.cpp  temp_pub.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
rmp_ros2bot_description/: CMakeLists.txt  setup.cfg  setup.py
rmp_ros2bot_description/launch/: gazebo.launch.py
rmp_ros2bot_description/models/: CMakeLists.txt
rmp_ros2bot_description/models/launch/: controller.launch  gazebo.launch
rmp_ros2bot_description/models/log/: latest_build
rmp_ros2bot_description/models/meshes/: base_link.stl  caster_1.stl
simple_pkg/: setup.cfg  setup.py
simple_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
simple_pkg/log/: latest_build
simple_pkg/simple_pkg/: sub.py
simple_pkg_cpp/: CMakeLists.txt
simple_pkg_cpp/install/: local_setup.sh  setup.bash  setup.sh
simple_pkg_cpp/log/: latest_build
simple_pkg_cpp/src/: publisher.cpp  subscriber.cpp
turtlesim_assignment/: package.xml  setup.cfg  setup.py
turtlesim_assignment/install/: local_setup.sh  setup.sh
turtlesim_assignment/log/: latest_build
turtlesim_assignment/turtlesim_assignment/: move_turtle.py
(+93 files in other folders)
